# SmartFarm

./: .gitignore  CMakeLists.txt  PROTOCOL.md  README.md
include/SmartFarm/: Connection.h  Crypto.h  Logger.h  Message.h  Protocol.h  SensorData.h  Util.h
sprints/: README.md  sprint1.md  sprint2.md  sprint3.md  sprint4.md  sprint5.md
src/: CMakeLists.txt
src/Common/: Connection.cpp  Message.cpp  Protocol.cpp  SensorData.cpp
src/Control/: ControlPanel.cpp  ControlPanel.h  Main.cpp
src/Sensor/: Main.cpp  SensorNode.cpp  SensorNode.h
src/Server/: Main.cpp  Server.cpp  Server.h
